# snkv

./: .gitignore  API_SPECIFICATION.md  CMakeLists.txt  Makefile  README.md  kvstore_example.md  litefs_setup_guide_on_singlemachine.md  memory.json  perf.json  pypi-downloads.json  tests.json
.github/workflows/: c-cpp.yml  publish.yml  update-pypi-stats.yml
docs/: api.html  benchmark.html  examples.html  index.html  snkvctl.html  ttl.html
docs/api/: API_SPECIFICATION.md
docs/internal/: BTREE_OPERATIONS.md  OS_LAYER_OPERATIONS.md  PAGER_OPERATIONS.md
docs/proposals/: VECTOR_STORE.md  core-api-extensions.md  ttl-support.md  vector-search-design-decisions.md  vector-search.md
docs/python_api/: API.md
examples/: basic.c  benchmark.c  checkpoint_demo.c  column_families.c  concurrent_rw.c  config.c  iterator_reverse.c  iterators.c  session_store.c  transactions.c  ttl.c
include/: helloworld.h  keyvaluestore.h  kvstore.h  kvstore_mutex.h  opcodes.h  parse.h  sqlite3.h  sqliteInt.h  sqliteLimit.h  vdbe.h  vdbeInt.h
internal/: BTREE_OPERATIONS.md  KVSTORE_OPERATIONS.md  OS_LAYER_OPERATIONS.md  PAGER_OPERATIONS.md
python/: .gitignore  README.md  conftest.py  pyproject.toml  setup.py  snkv_module.c
python/docs/: API.md
python/examples/: all_apis.py  basic.py  benchmark_diskcache.py  checkpoint.py  column_families.py  config.py  iterator_reverse.py  iterators.py  session_store.py  transactions.py  ttl.py  vector.py
python/snkv/: __init__.py  _snkv.pyi  snkvctl.py  vector.py
python/tests/: durability_1gb.py  test_acid.py  test_autovacuum.py  test_basic.py  test_checkpoint.py  test_column_family.py  test_concurrent.py  test_config.py  test_crash_recovery.py  test_enc.py  test_enc_lifecycle.py  test_iterator_reverse.py  test_json.py  test_new_apis.py  test_prefix.py  test_prod.py  test_snkvctl.py  test_stress.py  test_ttl.py  test_vector.py  test_wal.py
scripts/: gen_snkv_header.sh
src/: btree.c  busy_stub.c  global.c  hash.c  keyvaluestore.c  kvstore.c  kvstore.h  kvstore_enc.c  kvstore_mutex.c  kvstore_vec.c  main.c  pager.c  printf.c  sqlite_stubs.c  status.c  stub_value.c  threads.c  util.c  vdbe_stubs.c
src/monocypher/: monocypher.c
src/usearch/: usearch_impl.cpp
tests/: platform_compat.h  test_acid.c  test_autovacuum  test_autovacuum.c  test_benchmark.c  test_checkpoint  test_checkpoint.c  test_columnfamily.c  test_concurrent.c  test_config.c  test_crash_10gb.c  test_crash_recovery.c  test_enc.c  test_fault_inject.c  test_fullmutex.c  test_helloworld.c  test_iterator_reverse.c  test_json.c  test_multiprocess.c  test_mutex_journal.c  test_new_gaps.c  test_prefix.c  test_prod.c  test_regressions.c  test_review_fixes.c  test_stress.c  test_ttl.c  test_wal.c
